Closed Bug 558503 Opened 14 years ago Closed 14 years ago

[OOPP] Watching netflix video: Silverlight crashes the plugin helper.

Categories

(Core Graveyard :: Plug-ins, defect)

1.9.2 Branch
x86_64
Windows 7
defect
Not set
major

Tracking

(blocking1.9.2 .4+, status1.9.2 .4-fixed)

RESOLVED FIXED
Tracking Status
blocking1.9.2 --- .4+
status1.9.2 --- .4-fixed

People

(Reporter: nightman362, Assigned: jimm)

References

Details

(Keywords: verified1.9.2)

Attachments

(1 file, 1 obsolete file)

User-Agent:       Mozilla/5.0 (Windows; U; Windows NT 6.1; en-US; rv:1.9.2.3pre) Gecko/20100405 Firefox/3.6.3plugin1
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 6.1; en-US; rv:1.9.2.3pre) Gecko/20100405 Firefox/3.6.3plugin1

When I attempted to watch a video on Netflix's online streaming service. the Mozilla Plugin Helper process, and silverlight crash.

The film in question is "An American Tail".

Once I disable it for silverlight, everything works properly

Reproducible: Always

Steps to Reproduce:
1. Go to Netflix.com
2. Log in
3. Search for "An American Tail
4. Click on "Play"
5. Silverlight will crash while trying to initialize.
Actual Results:  
Silverlight crashes the plugin helper

Expected Results:  
I should be able to watch the movie.
Failed to mention I am using silverlight 4
And do you crash with the normal 3.6.3 build ?
And please provide a crash ID :
https://developer.mozilla.org/en/How_to_get_a_stacktrace_for_a_bug_report
I crash using 3.6.3 plugin 1

the stacktrace is here.
http://crash-stats.mozilla.com/report/index/203ec2a7-6e25-4dfd-a989-07ba32100410
>I crash using 3.6.3 plugin 1

I know that you crash with this build, that's not my question.
oh, no I do not crash with the regular biuld.
Component: IPC → Plug-ins
QA Contact: ipc → plugins
Summary: Watching netflix video: Silverlight crashes the plugin helper. → [OOPP] Watching netflix video: Silverlight crashes the plugin helper.
Blocks: OOPP
Status: UNCONFIRMED → NEW
blocking1.9.2: --- → ?
Ever confirmed: true
Version: unspecified → 1.9.2 Branch
nightman, it looks like you are triggering the "hang detector", does your browser stop responding for 10 seconds before this crash appears?

Also, is there a second crash report in about:crashes at the same time? There should be a pair of reports, and I need the other one also.

jmathies, the parent stack appears to be:

answerinvoke
script calls something.focus
nsGenericHTMLElementTearoff::Focus
<some syscall here, not sure what yet>
mozilla::plugins::PluginInstanceParent::PluginWindowHookProc
mozilla::plugins::PPluginInstanceParent::CallSetPluginFocus
<hang detector>

Can anyone else confirm this with SL4, and can anyone confirm or deny this bug using SL3?
WFM, tested in the latest trunk nightly. Tried a few things:

1) flipping tabs while moving is playing/paused
2) clicking on various controls - volume, pay/pause button
3) in and out of full screen
4) context menu / silverlight options

I'll test on lorentz as well. Generally, doesn't look like this is a major, easily reproducible hang.
Ok, bummer, confirmed, with silverlight 4.0 RC available off silverlight.net. 3.0 works fine. Will look into this.
stack 

coreclr.dll!CPFH_RealFirstPassHandler()  + 0xbafe5 bytes	
coreclr.dll!CPFH_RealFirstPassHandler()  - 0xb36 bytes	
coreclr.dll!_COMPlusFrameHandler()  + 0x76 bytes	
ntdll.dll!ExecuteHandler2@20()  + 0x26 bytes	
ntdll.dll!ExecuteHandler@20()  + 0x24 bytes	
ntdll.dll!_KiUserExceptionDispatcher@8()  + 0xf bytes	
xul.dll!MessageLoop::type()  Line 223 + 0xa bytes	C++
xul.dll!mozilla::plugins::IsPluginThread()  Line 213 + 0xc bytes	C++
>	xul.dll!mozilla::plugins::child::_getvalue(_NPP * aNPP=0x00a68ce8, NPNVariable aVariable=NPNVprivateModeBool, void * aValue=0x0994f2ac)  Line 833 + 0x5 bytes	C++
npctrl.dll!CNPBrowser::InPrivateMode()  + 0x4d bytes	
agcore.dll!_DOM_InPrivateMode@8()  + 0x28 bytes	
65bffb30()	
coreclr.dll!_CallDescrWorker@20()  + 0x33 bytes	
coreclr.dll!_CallDescrWorkerWithHandler@24()  + 0x63 bytes	
coreclr.dll!MethodDesc::CallDescr()  + 0x123 bytes	
coreclr.dll!MethodDesc::CallTargetWorker()  + 0x1f bytes	
coreclr.dll!MethodDescCallSite::Call()  + 0x1a bytes	
coreclr.dll!ThreadNative::KickOffThread_Worker()  + 0x166 bytes	
coreclr.dll!Thread::DoExtraWorkForFinalizer()  - 0xc46fb bytes	
coreclr.dll!Thread::ShouldChangeAbortToUnload()  + 0xa4d6 bytes	
coreclr.dll!Thread::ShouldChangeAbortToUnload()  + 0xa24b bytes	
coreclr.dll!Thread::RaiseCrossContextException()  - 0x1ec933 bytes	
coreclr.dll!Thread::DoADCallBack()  + 0xb7a0c bytes	
coreclr.dll!Thread::DoExtraWorkForFinalizer()  + 0x858e0 bytes	
coreclr.dll!Thread::ShouldChangeAbortToUnload()  + 0xa4d6 bytes	
coreclr.dll!Thread::ShouldChangeAbortToUnload()  + 0xa24b bytes	
coreclr.dll!Thread::ShouldChangeAbortToUnload()  + 0x1f6e84 bytes	
coreclr.dll!ManagedThreadBase::KickOff()  + 0x13 bytes	
coreclr.dll!ThreadNative::KickOffThread()  + 0x1bd bytes	
coreclr.dll!Thread::intermediateThreadProc()  + 0x46 bytes	
kernel32.dll!@BaseThreadInitThunk@12()  + 0x12 bytes	
ntdll.dll!___RtlUserThreadStart@8()  + 0x27 bytes	
ntdll.dll!__RtlUserThreadStart@8()  + 0x1b bytes
Ashish: although we're going to fix our threadsafety check, Microsoft really needs to modify the Silverlight plugin so that it doesn't perform NPN_GetValue calls off the plugin thread.
Attached patch fix (obsolete) — Splinter Review
Assignee: nobody → jmathies
Attachment #438533 - Flags: review?(benjamin)
Comment on attachment 438533 [details] [diff] [review]
fix

Can you avoid calling MessageLoop::current() twice? It does TLS lookup and isn't entirely cheap. e.g.

MessageLoop* loop = MessageLoop::current();
if (!loop)...
if (MessageLoop::TYPE_UI !=...)
Benjamin: acknowledge that. I will log a bug on our end.
Attached patch fixSplinter Review
Attachment #438533 - Attachment is obsolete: true
Attachment #438541 - Flags: review?
Attachment #438533 - Flags: review?(benjamin)
Attachment #438541 - Flags: review? → review?(benjamin)
Attachment #438541 - Flags: review?(benjamin) → review+
http://hg.mozilla.org/mozilla-central/rev/75f710972b02
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Attachment #438541 - Flags: approval1.9.2.4?
Comment on attachment 438541 [details] [diff] [review]
fix

a=LegNeato for 1.9.2.4. Please note code freeze is today @ 11:59 PM PST
Attachment #438541 - Flags: approval1.9.2.4? → approval1.9.2.4+
blocking1.9.2: ? → .4+
(In reply to comment #0)

> When I attempted to watch a video on Netflix's online streaming service. the
> Mozilla Plugin Helper process, and silverlight crash.

If you try with the lastest nightly 1.9.2 build, you should no longer see a crash: 

http://ftp.mozilla.org/pub/mozilla.org/firefox/nightly/2010-04-13-10-mozilla-1.9.2/

Can you give it a try?
I(In reply to comment #18)
> (In reply to comment #0)
> 
> > When I attempted to watch a video on Netflix's online streaming service. the
> > Mozilla Plugin Helper process, and silverlight crash.
> 
> If you try with the lastest nightly 1.9.2 build, you should no longer see a
> crash: 
> 
> http://ftp.mozilla.org/pub/mozilla.org/firefox/nightly/2010-04-13-10-mozilla-1.9.2/
> 
> Can you give it a try?

It didn't crash for me.
Thanks. I'll mark this as verified for 1.9.2 then. Let us know if it happens again but it should be fixed when Firefox 3.6.4 is released.
Keywords: verified1.9.2
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: