Bug 558503 - [OOPP] Watching netflix video: Silverlight crashes the plugin helper. r=bsmedberg.